JTEP-5 Add spring data and repository level